# signalhive

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  github.rs  main.rs  models.rs  pipeline.rs  startup.rs  state.rs
backend/src/db/: repos.rs  scans.rs  schedules.rs  schema.rs
backend/src/pipeline/: analysis.rs  routes.rs  scanning.rs  scoring.rs  utils.rs
frontend/: index.html  package.json
frontend/src/: App.jsx  config.js  report.js  sort.js
frontend/src/components/: ReportDashboard.jsx  ScanTimelineChart.jsx  SignalCard.jsx
frontend/src/panels/: ChecksPanel.jsx  ControlsPanel.jsx  HistoryPanel.jsx  ScanPanel.jsx
