[package]
name = "signal-hive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signal-hive"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
patchhive-product-core = { git = "https://github.com/patchhive/patchhive-product-core.git", rev = "67cbd85292d91338e799b967db7a98ee15872e29", version = "0.1.0" }
patchhive-github-data = { git = "https://github.com/patchhive/patchhive-github-data.git", rev = "335ebec68a79098ed9eebdde90bff522146d493d", version = "0.1.0" }
